# tokimo-app-home-assistant

./: Cargo.toml  README.md  lefthook.yml  tokimo-app.toml
.github/workflows/: ci.yml
migrations/: 0001_init.sql  0002_rooms_instance_id.sql  0003_entity_display.sql  0003_pages.sql  0004_entity_overrides_multi_instance.sql  0005_entity_category.sql  20260521000001__init.up.sql
skills/call-service/: SKILL.md
skills/get-status/: SKILL.md
skills/ha-call-service/: SKILL.md
skills/ha-get-status/: SKILL.md
skills/ha-search-entities/: SKILL.md
skills/search-entities/: SKILL.md
src/: app_server.rs  assets.rs  cli.rs  db.rs  error.rs  main.rs  protocol.rs  tls.rs  uds_client.rs  uds_server.rs
src/ha/: mod.rs  rest.rs  sync_visibility.rs  ws.rs
src/handlers/: accessories.rs  camera.rs  display.rs  entities.rs  groups.rs  instances.rs  mod.rs  pages.rs  rooms.rs  services.rs  sse.rs  summary.rs
src/state/: mod.rs
ui/: .pnpmfile.cjs  package.json  pnpm-lock.yaml  vite.config.ts
ui/src/: index.css  index.tsx  types.ts
ui/src/api/: accessories.ts  client.ts  display.ts  entities.ts  events.ts  instances.ts  rooms.ts  summary.ts
ui/src/components/: DetailPopover.tsx  EmptyState.tsx  EntityIcon.tsx
ui/src/components/detail/: BinarySensorDetail.tsx  CameraDetail.tsx  ClimateDetail.tsx  CoverDetail.tsx  DetailOverlay.tsx  FanDetail.tsx  LightDetail.tsx  LockDetail.tsx  MediaPlayerDetail.tsx  SceneDetail.tsx  ScriptDetail.tsx  SensorDetail.tsx  SubFunctionList.tsx  SwitchDetail.tsx  UnsupportedDetail.tsx  VacuumDetail.tsx  _types.ts
ui/src/components/detail/_helpers/: HorizontalSlider.tsx  VerticalSlider.tsx
ui/src/components/detail/subfunctions/: SubFunctionBinarySensor.tsx  SubFunctionButton.tsx  SubFunctionNumber.tsx  SubFunctionSelect.tsx  SubFunctionSensor.tsx  SubFunctionToggle.tsx
ui/src/components/edit/: BottomActionBar.tsx  DroppableSection.tsx  EditModeToolbar.tsx  EditableTileWrapper.tsx  MergeTilesModal.tsx  ResizeHandle.tsx  SectionDragHandle.tsx  SplitTileModal.tsx  jiggle.css
ui/src/components/home/: AddMenu.tsx  CamerasSection.tsx  CreateTileModal.tsx  DomainSummaryBadge.tsx  EditableTile.tsx  FavoritesSection.tsx  FilterChipBar.tsx  FlowGrid.tsx  HomeMenu.tsx  HomePage.tsx  HomePageDefault.tsx  HomePageFiltered.tsx  HomePageHeader.tsx  HomePageSections.tsx  HomeSummary.tsx  HomeView.tsx  RescanModal.tsx  RoomDetailView.tsx  RoomSection.tsx  SimilarEntitiesModal.tsx  StatusBadgesRow.tsx  TileContextMenu.tsx  TileGrid.tsx  _helpers.ts
ui/src/components/room/: RoomDomainSection.tsx  RoomEnvBadges.tsx  RoomPage.tsx  RoomPageHost.tsx
ui/src/components/settings/: AccessorySettingsPage.tsx  AddMemberModal.tsx  FamilyTab.tsx  FavoritesTab.tsx  HomeSettingsPage.tsx  MembersSection.tsx  RoomsCrud.tsx  RoomsTab.tsx  SettingsPane.tsx  SortableRow.tsx
ui/src/components/shell/: AnimatedSettingsPane.tsx  AppShell.tsx  ConnectionBadge.tsx  FamilySidebar.tsx  HomeAssistantMenuBar.tsx  InstanceAvatarStrip.tsx  InstanceSwitcher.tsx
ui/src/components/tiles/: BinarySensorTile.tsx  CameraTile.tsx  ClimateTile.tsx  CoverTile.tsx  FanTile.tsx  LightTile.tsx  LockTile.tsx  MediaPlayerTile.tsx  SceneTile.tsx  ScriptTile.tsx  SensorTile.tsx  SwitchTile.tsx  TileBase.tsx  TileBaseStyle.tsx  TileContextMenu.tsx  TileShell.tsx  VacuumTile.tsx  _types.ts  index.ts
ui/src/hooks/: use-container-width.ts  use-sidebar-collapsed.ts
ui/src/i18n/: en-US.ts  zh-CN.ts
ui/src/lib/: colors.ts  domain.ts  format-number.ts  format.ts
ui/src/pages/: DevicesPage.tsx  EntityManagementHost.tsx  EntityManagementPage.tsx  HomePage.tsx  InstancesPage.tsx  RoomsPage.tsx  SetupPage.tsx  WelcomePage.tsx
ui/src/state/: activeInstanceStore.ts  entityStore.ts  shellWindowDragDegrade.tsx  useAccessories.ts  useCallService.ts  useCollectionIndex.ts  useDetailOverlay.ts  useDisplayPatch.ts  useDragHandlers.ts  useEditHomeView.ts  useEntities.ts  useEntity.ts  useEntityIds.ts  useEntityMgmtNav.ts  useFilterChip.ts  useHomePageData.ts  useInstances.ts  useRoomNav.ts  useRooms.ts  useShowAll.ts  useTileContextMenu.ts  useToggleSizeRegistry.ts
ui/src/types/: summary.ts
