[package]
name        = "tokimo-app-home-assistant"
version     = "0.1.0"
edition     = "2024"
rust-version = "1.85"
license     = "MIT OR Apache-2.0"
description = "Tokimo app: Home Assistant integration with Apple Home–inspired UI."
repository  = "https://github.com/tokimo-lab/tokimo-app-home-assistant"

[dependencies]
tokimo-bus-client   = { git = "https://github.com/tokimo-lab/tokimo-bus.git", rev = "8b4fbac4ab2657cdeead0e74c6caa443a0980f4f" }
tokimo-bus-protocol = { git = "https://github.com/tokimo-lab/tokimo-bus.git", rev = "8b4fbac4ab2657cdeead0e74c6caa443a0980f4f", features = ["axum"] }

tokio              = { version = "1", features = ["rt-multi-thread", "macros", "time", "signal", "sync"] }
tokio-stream       = { version = "0.1", features = ["sync"] }
tokio-tungstenite  = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
uuid               = { version = "1", features = ["v4", "serde"] }
chrono             = { version = "0.4", features = ["serde"] }
sqlx               = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "macros", "migrate", "json"] }
rust-embed         = { version = "8", features = ["debug-embed"] }
mime_guess         = "2"
anyhow             = "1"
axum               = { version = "0.8", features = ["json"] }
reqwest            = { version = "0.12", default-features = false, features = ["rustls-tls-webpki-roots", "json", "stream"] }
rustls             = { version = "0.23", default-features = false, features = ["ring", "std"] }
rustls-pki-types   = "1"
futures-util       = "0.3"
async-stream       = "0.3"
dashmap            = "6"
url                = "2"
sha1               = "0.10"
regex              = "1"

[profile.release]
lto       = "thin"
opt-level = 3
strip     = "symbols"
